src/objects/appsolutely__Additional_Information_NL_Kvk_Filing__c.object
<CustomObject>
    <description>A CreditsafeCompanyAdditionalInformationNLKvkFilingV2</description>
    <fields>
        <fullName>appsolutely__Creditsafe_Company_Report_Full__c</fullName>
        <description>A detailed report about a company.</description>
        <label>Creditsafe Company Report</label>
        <referenceTo>appsolutely__Creditsafe_Company_Report_Full__c</referenceTo>
        <relationshipLabel>Additional Information NL Kvk Filings</relationshipLabel>
        <relationshipName>Additional_Information_NL_Kvk_Filings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>appsolutely__Date__c</fullName>
        <description>The date of the KVK filing.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appsolutely__Event__c</fullName>
        <description>A description of the KVK filing.</description>
        <label>Event</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Additional Information NL Kvk Filing</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Additional Information NL Kvk Filing</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Information NL Kvk Filings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>